--- a/requirements-common.txt
+++ b/requirements-common.txt
@@ -32,3 +32,4 @@ unidecode==1.3.8
 uvicorn[standard]==0.30.6
 weasyprint==65.1                    # HTML to PDF converter
 xlsxwriter==3.2.0
+psycopg[binary]==3.1.19                  # PostgreSQL adapter for synchronous operations at startup (database initializations & migrations), local installation is recommended for a production site
