--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
           - 6379:6379
       postgres:
         # Docker Hub image
-        image: postgres
+        image: "postgres:15.1"
         # Provide the password for postgres
         env:
           POSTGRES_PASSWORD: "somerealpassword"
