--- a/.github/workflows/alpha-publish.yml
+++ b/.github/workflows/alpha-publish.yml
@@ -16,6 +16,14 @@ jobs:
         with:
           ref: "main"
 
+      - name: Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5.8.0
+        with:
+          images: ${{ secrets.DOCKER_REGISTRY_IDENTIFER }}/hyperion
+          tags: |
+            type=raw,value=alpha
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3.11.1
 
@@ -26,17 +34,6 @@ jobs:
           username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
           password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
 
-      - name: Docker metadata
-        id: meta
-        uses: docker/metadata-action@v5.8.0
-        with:
-          images: ${{ secrets.DOCKER_REGISTRY_URL }}/hyperion
-          tags: |
-            type=raw,value=alpha
-          labels: |
-            preprod.environment=${{ github.event.inputs.preprod_env }}
-            preprod.branch=${{ github.event.inputs.branch }}
-
       - name: Build and push preprod image
         uses: docker/build-push-action@v6.18.0
         with:
@@ -46,6 +43,6 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: |
-            type=registry,ref=${{ secrets.DOCKER_REGISTRY_URL }}/hyperion:latest
-            type=registry,ref=${{ secrets.DOCKER_REGISTRY_URL }}/hyperion:alpha
-          cache-to: type=registry,ref=${{ secrets.DOCKER_REGISTRY_URL }}/${{ github.repository }}/cache,mode=max
+            type=registry,ref=${{ secrets.DOCKER_REGISTRY_IDENTIFER }}/hyperion:alpha
+            type=registry,ref=${{ secrets.DOCKER_REGISTRY_IDENTIFER }}/hyperion:latest
+          cache-to: type=inline
