--- a/requirements-common.txt
+++ b/requirements-common.txt
@@ -12,6 +12,7 @@ fastapi[standard]==0.115.6
 firebase-admin==6.5.0               # Firebase is used for push notification
 google-auth-oauthlib==1.2.1
 helloasso-python==1.0.5
+httpx==0.27.0
 icalendar==5.0.13
 jellyfish==1.0.4                    # String Matching
 Jinja2==3.1.6                       # template engine for html files
@@ -25,7 +26,6 @@ pypdf==4.3.1
 python-dotenv==1.0.1                # load environment variables from .env file
 python-multipart==0.0.18             # a form data parser, as oauth flow requires form-data parameters
 redis==5.0.8
-requests==2.32.4
 sqlalchemy-utils == 0.41.2
 SQLAlchemy[asyncio]==2.0.32         # [asyncio] allows greenlet to be installed on Apple M1 devices.
 unidecode==1.3.8
