--- a/requirements-common.txt
+++ b/requirements-common.txt
@@ -26,6 +26,7 @@ PyMuPDF==1.24.9                     # PDF processing, imported as `fitz`
 pypdf==4.3.1
 python-multipart==0.0.18             # a form data parser, as oauth flow requires form-data parameters
 redis==5.0.8
+requests==2.32.4
 sqlalchemy-utils == 0.41.2
 SQLAlchemy[asyncio]==2.0.32         # [asyncio] allows greenlet to be installed on Apple M1 devices.
 unidecode==1.3.8
