--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -14,3 +14,4 @@ types-Authlib==1.5.0.20250516
 types-fpdf2==2.8.3.20250516
 types-psutil==7.0.0.20250601
 types-redis==4.6.0.20241004
+types-requests==2.32.0.20250515
