--- a/.github/workflows/preprod-publish.yml
+++ b/.github/workflows/preprod-publish.yml
@@ -1,4 +1,4 @@
-name: Publish Preprod
+name: Build and Publish Preprod
 
 on:
   workflow_dispatch:
@@ -33,6 +33,19 @@ jobs:
         with:
           ref: ${{ github.event.inputs.branch }}
 
+      - name: Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5.8.0
+        with:
+          images: ${{ secrets.DOCKER_REGISTRY_IDENTIFER }}/hyperion
+          tags: |
+            type=raw,value=${{ github.event.inputs.preprod_env }}
+            type=raw,value=preprod-latest,enable={{is_default_branch}}
+            type=sha,prefix={{branch}}-
+          labels: |
+            preprod.environment=${{ github.event.inputs.preprod_env }}
+            preprod.branch=${{ github.event.inputs.branch }}
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3.11.1
 
@@ -42,19 +55,6 @@ jobs:
           registry: ${{ secrets.DOCKER_REGISTRY_URL }}
           username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
           password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
-
-      - name: Docker metadata
-        id: meta
-        uses: docker/metadata-action@v5.8.0
-        with:
-          images: ${{ secrets.DOCKER_REGISTRY_URL }}/hyperion
-          tags: |
-            type=raw,value=${{ github.event.inputs.preprod_env }}
-            type=raw,value=preprod-latest,enable={{is_default_branch}}
-            type=sha,prefix={{branch}}-
-          labels: |
-            preprod.environment=${{ github.event.inputs.preprod_env }}
-            preprod.branch=${{ github.event.inputs.branch }}
 
       - name: Build and push preprod image
         uses: docker/build-push-action@v6.18.0
