--- a/.github/workflows/alpha-publish.yml
+++ b/.github/workflows/alpha-publish.yml
@@ -1,4 +1,4 @@
-name: Publish Alpha
+name: Build and Publish Alpha
 
 on:
   workflow_dispatch:
@@ -34,7 +34,7 @@ jobs:
           username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
           password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
 
-      - name: Build and push preprod image
+      - name: Build and push alpha image
         uses: docker/build-push-action@v6.18.0
         with:
           context: .
