Put PR number and get branch from there

--- a/.github/workflows/preprod-publish.yml
+++ b/.github/workflows/preprod-publish.yml
@@ -4,10 +4,8 @@ on:
   workflow_dispatch:
     inputs:
       pr:
-        description: "PR to deploy in preprod"
+        description: "Number of the PR to deploy in preprod"
         required: true
-        type: choice
-        options: ${{ fromJSON($(curl https://api.github.com/repos/${{ github.repository }}/pulls | jq '[.[] | ("#" + (.number|tostring) + " - " + .title)]')) }}
       preprod_env:
         description: "Preprod environment"
         required: true
@@ -29,10 +27,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Branch name from input PR number
+        id: branch
+        run: echo "branch=$(curl https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.inputs.pr }} | jq '.head.ref')" >> "$GITHUB_OUTPUT"
+
       - name: Checkout code
         uses: actions/checkout@v5
         with:
-          ref: $(curl https://api.github.com/repos/${github.repository}/pulls/ ${${{github.event.inputs.pr }}//@(*#| *)} | jq '.head.ref')
+          ref: ${{ steps.branch.outputs.branch }}
 
       - name: Docker metadata
         id: meta
@@ -45,7 +47,7 @@ jobs:
             type=sha,prefix={{branch}}-
           labels: |
             preprod.environment=${{ github.event.inputs.preprod_env }}
-            preprod.branch=${{ github.event.inputs.branch }}
+            preprod.branch=${{ steps.branch.outputs.branch }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3.11.1
