--- a/.github/workflows/preprod-publish.yml
+++ b/.github/workflows/preprod-publish.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Branch name from input PR number
         id: branch
         run: |
-          url=$(${{ github.api_url }}/repos/${{ github.repository }}/pulls/${{ github.event.inputs.pr }});
+          url=${{ github.api_url }}/repos/${{ github.repository }}/pulls/${{ github.event.inputs.pr }};
           echo $url;
           branch=$(curl $url | jq  '.head.ref');
           echo "branch=$branch" >> "$GITHUB_OUTPUT";
