--- a/.github/workflows/preprod-publish.yml
+++ b/.github/workflows/preprod-publish.yml
@@ -29,12 +29,7 @@ jobs:
     steps:
       - name: Branch name from input PR number
         id: branch
-        run: |
-          url=${{ github.api_url }}/repos/${{ github.repository }}/pulls/${{ github.event.inputs.pr }};
-          echo $url;
-          branch=$(curl $url | jq -r '.head.ref');
-          echo "branch=$branch" >> "$GITHUB_OUTPUT";
-          cat "$GITHUB_OUTPUT";
+        run: echo "branch=$(curl -f ${{ github.api_url }}/repos/${{ github.repository }}/pulls/${{ github.event.inputs.pr }} | jq -r '.head.ref')" >> "$GITHUB_OUTPUT"
       - name: Checkout code
         uses: actions/checkout@v5
         with:
