--- a/.env.template
+++ b/.env.template
@@ -5,6 +5,7 @@
 # Should be set to the name of the postgres container
 POSTGRES_USER=""
 POSTGRES_PASSWORD=""
+# Should be set to the name of the postgres container
 POSTGRES_HOST=""
 POSTGRES_DB="hyperion"
 POSTGRES_TZ="Etc/UTC"
