--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,7 @@ name: Test
 
 on:
   pull_request:
-    types: [opened, edited, ready_for_review, synchronize]
+    types: [opened, ready_for_review, synchronize]
   push:
     branches:
       - main
@@ -52,6 +52,9 @@ jobs:
       - name: Check out the code
         uses: actions/checkout@v5
 
+      - name: Fetch full main branch history # We don't known the the base commit of the PR
+        run: git fetch origin main --unshallow
+
       # Setup Python (faster than using Python container)
       - name: Setup Python
         uses: actions/setup-python@v6
@@ -79,8 +82,14 @@ jobs:
           path: .pytest_cache
           key: pytest_cache-${{ github.head_ref }}
 
-      - name: Run unit tests with Postgresql
-        run: python -m pytest --cov
+      # Run unit tests, run them all when push to main branch
+      - name: Run all unit tests
+        run: python tests_script.py --cov --all
+        if: github.event_name == 'push'
+
+      - name: Run unit tests for changed files
+        run: python tests_script.py --cov
+        if: github.event_name == 'pull_request'
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5.5.1
